--- a/game.html
+++ b/game.html
@@ -14,6 +14,10 @@
       background: #ccc;
       border: 1px solid black;
     }
+
+    this game needs something 
+    hello world 
+
   </style>
   <script type="text/javascript">
     var memory_values = [];
